2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeid.h: let paint_shape paint non-rle shapes properly
	* vgafile.cc: assert(rle); in the paint_rle_* functions
	* objs.cc: more item names for SI

2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: finally fixed 'blood' names

2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Configuration.*, exult.cc: added -c option for alternate config files
	  (quite useful if you have multiple data dirs or languages of BG/SI)

2002-06-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* singles.h, shapeid.cc: added pal = gwin->get_pal() to singles
	* *game.*, txtscroll.*: got rid of extra Palette objects

2002-06-28  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h (public): Game_clock is now a pointer.
	* exult.cc,game.cc:  --nomenu arg skips game menu.

2002-06-28  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* gamewin.h (public): Reordered and added comments.

2002-06-27  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapeid.*,etc:  Text routines moved to Shape_manager.
	* palette.*,etc:  All palette vars/methods moved to Palette.
	* objs.h:  Added get_chunk().
	* gamewin.h,etc:  get_chunk* removed (it's in Game_map).

2002-06-27  Max Horn  <max@quendi.de>
	* objs/objiter.cc: Fixed compilation with CodeWarrior 7 (MacOS Classic)

2002-06-26  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* objs/*:  Removed umachine parm. from activate() methods.
	* objs/*:  Removed most 'gwin' parameters.
	* objs/objs.h (public): Game_object::paint() no longer takes gwin
	as a parameter. Same for paint() in Special_effects.
	* gumps/*:  Got rid of gwin parm. in ALL methods.
	* singles.h: A class to hold the common 'singletons'.

2002-06-25  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.h, etc.: Cleanup:  Effects_manager class added.
	* actions.cc:  Wrote Approach_actor_action for use in
	combat to make approach of combatants work better.